force-app/main/default/objects/Hidden_Divergence_Trade__c/fields/Stop_Loss_Price__c.field-meta.xml
<CustomField>
    <fullName>Stop_Loss_Price__c</fullName>
    <label>Stop Loss Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>