force-app/main/default/objects/Hidden_Divergence_Trade__c/fields/Symbol__c.field-meta.xml
<CustomField>
    <fullName>Symbol__c</fullName>
    <label>Symbol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Symbols</valueSetName>
    </valueSet>
</CustomField>