force-app/main/default/objects/Hidden_Divergence_Trade__c/fields/Take_Profit_Price__c.field-meta.xml
<CustomField>
    <fullName>Take_Profit_Price__c</fullName>
    <label>Take Profit Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>